toggle normal maps, use earth normal not bump

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <label>x:</label> <input id="phi" type="range" min="-180" max="180" step="1"><br>
         <label>y:</label> <input id="rho" type="range" min="-180" max="180" step="1"><br>
         <label>z:</label> <input id="thet" type="range" min="-180" max="180" step="1"><br>
+        <label class="check" for="spec">normal map</label><input id="spec" type="checkbox" name="spec" value="on" checked><br>
       </section>
     </div>
   </div>
@@ -46,13 +47,12 @@
         <label>x:</label> <input id="phi0" type="range" min="-180" max="180" step="1"><br>
         <label>y:</label> <input id="rho0" type="range" min="-180" max="180" step="1"><br>
         <label>z:</label> <input id="the0" type="range" min="-180" max="180" step="1"><br>
+        <label class="check" for="spec0">normal map</label><input id="spec0" type="checkbox" name="spec0" value="on" checked><br>
       </section>
     </div>
   </div>
 
   <div id="note">
-    Top left: normal mapped <a href="http://planetpixelemporium.com/mars.html">Mars</a>.
-    Top right: regular texture mapped checkerboard.
-    Bottom left: specular &amp; bump mapped <a href="http://planetpixelemporium.com/earth.html">Earth</a>.
+    Planet maps from <a href="http://planetpixelemporium.com/">planetpixelemporum</a>.
   </div>
 </body>
