Add planar checkers

--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
     </div>
   </div>
 
+  <div id="ui-planar">
+    <div id="controls">
+      <section>
+        <h2>Planar Checkers</h2>
+        <label>x:</label> <input id="phip" type="range" min="-180" max="180" step="1"><br>
+        <label>y:</label> <input id="rhop" type="range" min="-180" max="180" step="1"><br>
+        <label>z:</label> <input id="thep" type="range" min="-180" max="180" step="1"><br>
+      </section>
+    </div>
+  </div>
+
   <div id="note">
     Planet maps from <a href="http://planetpixelemporium.com/">planetpixelemporum</a>.
   </div>
